--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://github.com/Ss4nti4go/AsociacionPaliativos",
-  "name": "paleativos",
+  "homepage": "https://github.com/Ss4nti4go/AsociacionPaliativos/",
+  "name": "paliativos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,10 +13,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "firebase": "^10.13.2",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.1",
+    "sweetalert2": "^11.14.1",
+    "sweetalert2-react-content": "^5.0.7",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
